@@ -1,5 +1,6 @@
 package uk.gov.hmcts.reform.cwrdapi.service;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import net.thucydides.core.annotations.WithTag;
 import net.thucydides.core.annotations.WithTags;
 import org.junit.jupiter.api.Test;
@@ -18,6 +19,7 @@ import uk.gov.hmcts.reform.cwrdapi.domain.CaseWorkerAudit;
 import uk.gov.hmcts.reform.cwrdapi.domain.ExceptionCaseWorker;
 import uk.gov.hmcts.reform.cwrdapi.oidc.JwtGrantedAuthoritiesConverter;
 import uk.gov.hmcts.reform.cwrdapi.repository.ExceptionCaseWorkerRepository;
+import uk.gov.hmcts.reform.cwrdapi.repository.StaffAuditRepository;
 import uk.gov.hmcts.reform.cwrdapi.util.AuditStatus;
 import uk.gov.hmcts.reform.cwrdapi.util.CaseWorkerConstants;
 import uk.gov.hmcts.reform.lib.util.serenity5.SerenityTest;
@@ -25,11 +27,11 @@ import uk.gov.hmcts.reform.lib.util.serenity5.SerenityTest;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
 import static uk.gov.hmcts.reform.cwrdapi.util.CaseWorkerConstants.PARTIAL_SUCCESS;
 
@@ -38,7 +40,7 @@ import static uk.gov.hmcts.reform.cwrdapi.util.CaseWorkerConstants.PARTIAL_SUCCE
 @DataJpaTest
 @TestPropertySource(properties = {"spring.config.location=classpath:application-test.yml"})
 @ContextConfiguration(classes = {CaseWorkerRefApiApplication.class, TestConfig.class, RepositoryConfig.class})
-public class ValidationServiceFacadeImplTest {
+class ValidationServiceFacadeImplTest {
 
     @Spy
     @Autowired
@@ -50,9 +52,11 @@ public class ValidationServiceFacadeImplTest {
     @MockBean
     JwtGrantedAuthoritiesConverter jwtGrantedAuthoritiesConverter;
 
-    @Test
-    public void testAuditJsr() {
+    StaffAuditRepository staffAuditRepository = mock(StaffAuditRepository.class);
+    ObjectMapper objectMapper = mock(ObjectMapper.class);
 
+    @Test
+    void testAuditJsr() {
         List<CaseWorkerDomain> caseWorkerProfiles = new ArrayList<>();
         CaseWorkerProfile profile = CaseWorkerProfile.builder().build();
         profile.setRowId(1);
@@ -76,20 +80,21 @@ public class ValidationServiceFacadeImplTest {
         String error = exceptionCaseWorkers.stream()
             .filter(s -> s.getFieldInError().equalsIgnoreCase("firstName"))
             .map(field -> field.getErrorDescription())
-            .collect(Collectors.toList()).get(0);
+            .toList().get(0);
         assertEquals(CaseWorkerConstants.FIRST_NAME_MISSING, error);
     }
 
     @Test
-    public void testInsertAudit() {
+    void testInsertAudit() {
         assertTrue(validationServiceFacadeImpl.updateCaseWorkerAuditStatus(AuditStatus.IN_PROGRESS, "test")
             > 0);
     }
 
     @Test
-    public void testStartAuditJob() {
+    void testStartAuditJob() {
         assertTrue(validationServiceFacadeImpl.startCaseworkerAuditing(AuditStatus.IN_PROGRESS, "test")
             > 0);
     }
+
 }
 
